--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html>
     
+    <head>
+        <title>Job Tracker</title>
+    </head>
+    <body>
+        <h1> Job Tracker</h1>
+
+    </body>
+    
 </html>
