--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     
     <head>
         <title>Job Tracker</title>
     </head>
     <body>
         <h1> Job Tracker</h1>
-
+        <div>
+            
+        </div>
     </body>
     
 </html>
