--- a/templates/Sign_up.html
+++ b/templates/Sign_up.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <heml lang="en">
     <head>
-        <title>Job Tracker - Sign up</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Job Tracker</title>
+        <link rel="stylesheet" href="/styles/global.css">
     </head>
 
     <body>
