--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
     
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Job Tracker</title>
+        <link rel="stylesheet" href="/styles/global.css">
     </head>
+
     <body>
         <h1> Job Tracker</h1>
         <div>
