--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Job Tracker - Login</title>
+        <link rel="stylesheet" href="../styles/login.css">
     </head>
     
     <body>
-        <div>
+        <div class="login_body">
             <h1>Welcome to your Job tracker</h1>
             <form>
-                <label>Username: </label>
-                <input type="text">
-                <label>Password:</label>
-                <input type="password">
-                <input type="submit" value="Login">
+                <div class="login_user" >
+                    <label class="login_username">Username: </label>
+                    <input class="login_username_field" type="text">
+                </div>
+                <div class="login_pass">
+                    <label class="login_password">Password:</label>
+                    <input class="login_password_field" type="password">
+                </div>
+                <input class="login_submit" type="submit" value="Login">
             </form>
         </div>
         <div>
