--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -10,20 +10,23 @@
     <body>
         <div class="login_body">
             <h1>Welcome to your Job tracker</h1>
-            <form>
-                <div class="login_user" >
-                    <label class="login_username">Username: </label>
-                    <input class="login_username_field" type="text">
-                </div>
-                <div class="login_pass">
-                    <label class="login_password">Password:</label>
-                    <input class="login_password_field" type="password">
-                </div>
-                <input class="login_submit" type="submit" value="Login">
-            </form>
+            <div class="Login_center">
+                <form>
+                    <div class="login_user" >
+                        <label class="login_username">Username: </label>
+                        <input class="login_username_field" type="text">
+                    </div>
+                    <div class="login_pass">
+                        <label class="login_password">Password:</label>
+                        <input class="login_password_field" type="password">
+                    </div>
+                    <div class="login_submit">
+                        <input  type="submit" value="Login">
+                        <button type="submit" value="Sign Up"></button>
+                    </div>    
+                </form>
+            </div>
         </div>
-        <div>
-            <a href="/templates/Sign_up.html">Sign up</a>
-        </div>
+        
     </body>
 </html>
