--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -7,19 +7,23 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
         <title>Job Tracker - Login</title>
-        <link rel="stylesheet" href="../styles/login.css">
+        <link rel="stylesheet" href="../styles/login.css"> 
+        <link rel="shorcut icon" href="/Images/J-removebg.png">
     </head>
     
     <body>
         <div class="container">
             <div class="login_body">
-                <h1 class="title">Job tracker</h1>
+                <head>
+                    <img src="/Images/J-removebg.png" class="logo-bg">
+                    <h1 class="title">Job tracker</h1>
+                </head>
                     <form>
                             <label for="username">Username</label>
-                            <input type="text" id="username" placeholder="Enter your username" >
+                            <input type="text" id="username" class="input-field" placeholder="Enter your username" >
     
                             <label for="password">Password</label>
-                            <input type="password" id="password" placeholder="Enter your password" >
+                            <input type="password" id="password" class="input-field" placeholder="Enter your password" >
     
                             <div class="btn-container">
                                 <button type="submit" class="signup-btn">SIGN UP</button>
