--- a/templates/Sign_up.html
+++ b/templates/Sign_up.html
@@ -9,29 +9,30 @@
         <title>Job Tracker</title>
         <link rel="stylesheet" href="/styles/global.css">
         <link rel="stylesheet" href="/styles/signup.css">
+        <link rel="shorcut icon" href="/Images/J-removebg.png">
     </head>
 
     <body>
-        <div>
-            <h1 class="main-title"> WELCOME <br> TO <br> JOB TRACKER </h1>
+        <div class="left-section">
+            <img class="logo" src="/Images/J-removebg.png">
+            <h1 class="main-title"> WELCOME <br> TO <br><i>JOB</i> TRACKER</h1>
         </div>
         
         
-        
         <div class="sign-up-form">
-            <h2 class="signup-title"> SIGN UP </h2>
+            <h2 class="signup-title">SIGN UP</h2>
                 <form>
                     <label for="signup-username">Username</label>
-                    <input type="text" id="signup-username" class="username">
+                    <input type="text" id="signup-username" class="input-field">
 
                     <label for="signup-email">Email</label>
-                    <input type="email" id="signup-email">
+                    <input type="email" id="signup-email" class="input-field">
 
-                    <label>Password</label>
-                    <input type="password" class="signup-password">
+                    <label for="signup-password">Password</label>
+                    <input type="password" id="signup-password" class="input-field">
 
-                    <label>Confirm Password</label>
-                    <input type="password" class="signup-password">
+                    <label for="signup-confirm-password">Confirm Password</label>
+                    <input type="password" id="signup-confirm-password" class="input-field">
 
 
                     <div class="signup-btn-container">
