--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">    
         <title>Job Tracker</title>
         <link rel="stylesheet" href="/styles/global.css">
+        <link rel="shorcut icon" href="/Images/J-removebg.png">
     </head>
 
     <body>
