basic design of homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,25 @@
     </head>
 
     <body>
-        <h1> Job Tracker</h1>
-        <div>
-            
+        <div class="title-section">
+            <h1 class="title"> Job Tracker</h1>
+            <button class="account-button"> NB</button>
+        </div>
+        
+        <div class="add-job-section">
+            <button class="add-job">Add job</button>
+            <button class="search-bar"></button>
+            <button class="filter-bar"></button>
+        </div>
+
+        <div class="container">
+            <div class="container-title">
+                <h2>Company name</h2>
+                <h2>Title</h2>
+                <h2>Status</h2>
+                <h2>Date applied</h2>
+                <h2>Notes</h2>
+            </div>
         </div>
     </body>
     
