--- a/static/login.css
+++ b/static/login.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background: url('../Images/Strip\ lines\ background.png'), 
+    background: url(/static/Images/Strip\ lines\ background.png), 
     linear-gradient(120deg, #8C52FF, #5CE1E6);
     background-size: cover, cover;
     color: #333333 ;
@@ -64,13 +64,10 @@ form label{
 }
 
 .input-field{
-    font-family: "Julius Sans One", serif;
-    font-weight: 400;
-    font-style: normal;
     width: 100%;
     max-width: 350px;
     margin-bottom: 10px;
-    box-shadow: 10px 5px 6px rgb(0,0,0,0.5);
+    box-shadow: 1px 5px 6px rgb(0,0,0,0.5);
     border: 1px solid #ccc;
     border-radius: 24px;
     padding: 8px;
