added the user session and displayed the data of the companies that the user has applied so far

--- a/static/global.css
+++ b/static/global.css
@@ -119,6 +119,11 @@ body{
     border-bottom: 1px solid #ddd;
 }
 
+.table-row span{
+    flex: 1;
+    text-align: center;
+}
+
 .table-row input{
     margin-left: 10px;
 }
