--- a/static/signup.css
+++ b/static/signup.css
@@ -112,3 +112,34 @@ form label{
 .login-btn:hover {
     color: #3B81D1;
 }
+
+.flash-container {
+    margin: 20px 0;
+}
+
+.flash-messages {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.flash-messages li {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+/* Error Message Styling */
+.flash-messages .error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+/* Success Message Styling */
+.flash-messages .success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
