--- a/static/global.css
+++ b/static/global.css
@@ -43,6 +43,51 @@ body{
     box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
+.profile-container {
+    position: relative;
+    display: inline-block;
+}
+
+.profile-section {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    width: 120px;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+    padding: 10px;
+}
+
+.profile-section.show {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+}
+
+.logout-btn {
+    width: 100%;
+    border: none;
+    background: none;
+    font-size: 18px;
+    padding: 15px;
+    text-align: left;
+    cursor: pointer;
+}
+
+.logout-btn:link,
+.logout-btn:visited,
+.logout-btn:hover,
+.logout-btn:active {
+    color: black;       /* Keeps the same text color */
+    text-decoration: none; /* Removes underlines */
+}
+
+
 .action-section{
     display: flex;
     justify-content: flex-end;
@@ -165,7 +210,7 @@ body{
 
 .modal-content{
     background-color: white;
-    margin: 10% auto;
+    margin: 5% auto;
     padding: 20px;
     border-radius: 10px;
     width: 30%;
